--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,21 @@
-.App {
-  text-align: center;
-}
 
 .App-logo {
   height: 40vmin;
+  height: 14vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 1s linear;
   }
 }
 
 .App-header {
   background-color: #282c34;
+  background-color: #79AFD7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +23,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-size: calc(3px + 1vmin);
+  font-family:  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #1D438E;
+  text-shadow: 1px 1px 2px rgba(71, 68, 68, 0.479);
 }
 
 .App-link {
@@ -30,9 +35,6 @@
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
-  }
-  to {
     transform: rotate(360deg);
   }
 }
